# bytesip

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.kiro/specs/bytesip-news-agent/: design.md  requirements.md  research.md  spec.json  tasks.md
agent/: agentcore.yaml  entrypoint.py  pyproject.toml
agent/bytesip_agent/: __init__.py  agent.py  memory.py  models.py  tools.py
agent/tests/: __init__.py  test_agent.py  test_entrypoint.py  test_memory.py  test_tools.py
docs/: requirements.md  troubleshooting-agentcore-lambda.md
infrastructure/cdk/: .gitignore  app.py  cdk.json  package-lock.json
infrastructure/cdk/bytesip_stack/: __init__.py  bytesip_stack.py
infrastructure/cdk/lib/: bytesip-stack.ts
infrastructure/cdk/test/: bytesip-stack.test.ts
infrastructure/cdk/tests/: __init__.py  test_bytesip_stack.py
infrastructure/dynamodb/: table-definition.json
infrastructure/lambda/: pyproject.toml
infrastructure/lambda/bytesip_news_fetcher/: .env.example  __init__.py  cache_manager.py  config.py  handler.py  models.py  news_fetcher.py  requirements.txt
infrastructure/lambda/bytesip_news_fetcher/handlers/: __init__.py  base.py  github.py  qiita.py  zenn.py
infrastructure/lambda/tests/: __init__.py  test_cache_manager.py  test_handlers.py  test_models.py  test_news_fetcher.py
scripts/: create_gateway_target.py  setup-local-dynamodb.sh  setup_agentcore_permissions.py  test_gateway.py
ui/: app.py  pyproject.toml
ui/tests/: test_app.py
