[project]
name = "bytesip-ui"
version = "0.1.0"
description = "ByteSip Streamlit UI for IT/AI news curation"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
