[project]
name = "bytesip-news-fetcher"
version = "0.1.0"
description = "ByteSip News Fetcher Lambda function"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["bytesip_news_fetcher"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
